retrieved-preprod/objects/Initial_Assessment__c/fields/Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Symptoms__c</fullName>
    <label>Symptoms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Frequent Mood Changes</fullName>
            </value>
            <value>
                <fullName>Hallucinations</fullName>
            </value>
            <value>
                <fullName>Problem Solving</fullName>
            </value>
            <value>
                <fullName>Short Term Memory Loss</fullName>
            </value>
            <value>
                <fullName>Completing Tasks</fullName>
            </value>
            <value>
                <fullName>Sundowning</fullName>
            </value>
            <value>
                <fullName>Spatial/Visual Relationships</fullName>
            </value>
            <value>
                <fullName>Misplacing Items</fullName>
            </value>
            <value>
                <fullName>Poor Eating</fullName>
            </value>
            <value>
                <fullName>Speaking/Conversing</fullName>
            </value>
            <value>
                <fullName>Poor Judgment</fullName>
            </value>
            <value>
                <fullName>Sleeping Problems</fullName>
            </value>
            <value>
                <fullName>Anxiety</fullName>
            </value>
            <value>
                <fullName>Agitation</fullName>
            </value>
            <value>
                <fullName>Fear</fullName>
            </value>
            <value>
                <fullName>Paranoia</fullName>
            </value>
            <value>
                <fullName>Suspicion</fullName>
            </value>
            <value>
                <fullName>Aggression</fullName>
            </value>
            <value>
                <fullName>Confusion of Time/Place</fullName>
            </value>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
            <value>
                <fullName>Depression</fullName>
            </value>
            <value>
                <fullName>Repetition</fullName>
            </value>
            <value>
                <fullName>Wandering</fullName>
            </value>
            <value>
                <fullName>Oriented</fullName>
            </value>
            <value>
                <fullName>Comatose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>