retrieved-preprod/objects/Initial_Assessment__c/fields/Time_Sleep_Patterns__c.field-meta.xml
<CustomField>
    <fullName>Time_Sleep_Patterns__c</fullName>
    <label>Time</label>
    <type>Time</type>
</CustomField>