retrieved-preprod/objects/Initial_Assessment__c/fields/Transfer_Risks__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Risks__c</fullName>
    <label>Transfer Risks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>