retrieved-preprod/objects/Initial_Assessment__c/fields/Triggers__c.field-meta.xml
<CustomField>
    <fullName>Triggers__c</fullName>
    <label>Triggers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>