retrieved-preprod/objects/Initial_Assessment__c/fields/Uses_Shower_Bench__c.field-meta.xml
<CustomField>
    <fullName>Uses_Shower_Bench__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uses Shower Bench</label>
    <type>Checkbox</type>
</CustomField>