retrieved-preprod/objects/Initial_Assessment__c/fields/UsingMonitoringDevice__c.field-meta.xml
<CustomField>
    <fullName>UsingMonitoringDevice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Using monitoring device?</label>
    <type>Checkbox</type>
</CustomField>