retrieved-preprod/objects/Initial_Assessment__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <label>Vehicle</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Drives</fullName>
            </value>
            <value>
                <fullName>Needs Caregiver To Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>