retrieved-preprod/objects/Initial_Assessment__c/fields/Wears_briefs__c.field-meta.xml
<CustomField>
    <fullName>Wears_briefs__c</fullName>
    <label>Wears briefs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accident Protection</fullName>
            </value>
            <value>
                <fullName>Full Incontinence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>