retrieved-preprod/objects/Initial_Assessment__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight (lbs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>