retrieved-preprod/objects/Initial_Assessment__c/validationRules/Validate_Doctors_Appointment_in_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Doctors_Appointment_in_Other</fullName>
    <active>true</active>
    <description>Please provide details when &quot;Doctor&apos;s Appointment(s)&quot; is selected for the Other field in Driving Section.</description>
    <errorConditionFormula>AND(
INCLUDES( Other_for_Driving__c , &quot;Doctor&apos;s Appointment(s)&quot;),
ISBLANK(  Doctor_s_Appointment_s__c )
)</errorConditionFormula>
    <errorDisplayField>Doctor_s_Appointment_s__c</errorDisplayField>
    <errorMessage>Please provide details when &quot;Doctor&apos;s Appointment(s)&quot; is selected for the Other field in Driving Section.</errorMessage>
</ValidationRule>