retrieved-preprod/objects/Initial_Assessment__c/validationRules/Validate_Errands_for_Other_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Errands_for_Other_field</fullName>
    <active>true</active>
    <description>The Errands field is required for the Errands value in Other field in the Driving Section</description>
    <errorConditionFormula>AND(
INCLUDES( Other_for_Driving__c , &quot;Errands&quot;),
ISBLANK( Errands__c )
)</errorConditionFormula>
    <errorDisplayField>Errands__c</errorDisplayField>
    <errorMessage>Please provide details when &quot;Errands&quot; is selected for the Other field in Driving Section.</errorMessage>
</ValidationRule>