retrieved-preprod/objects/Initial_Assessment__c/validationRules/Validate_Height.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Height</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Height__c)),
    NOT (REGEX(
        Height__c,
        &quot;^[1-9]&apos;([0-9]|1[0-1])\&quot;$&quot;
    ))
)</errorConditionFormula>
    <errorDisplayField>Height__c</errorDisplayField>
    <errorMessage>Enter height in format like 5&apos;7&quot; (Feet: 1–9, Inches: 0–11)</errorMessage>
</ValidationRule>